
syntax = "proto3";

package helloim.protocol;

option java_package = "com.github.xuning888.helloim.contract.protobuf";
option java_outer_classname = "Echo";
option go_package = "github.com/xuning888/helloIMClient/internal/proto;helloim_proto";


message EchoRequest {
  string msg = 1;
}

message EchoResponse {
  string msg = 2;
}

message EmptyRequest {
}

message EmptyResponse {
}